--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: My website
+title: My First GitHub
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: A site to start using GitHub on a regular bases.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -38,13 +38,13 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+navbar-col: "#8C1D40"
 navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
-page-col: "#FFFFFF"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+navbar-children-col: "#8C1D40"
+page-col: "#FFC627"
+link-col: "#00A3E0"
+hover-col: "#78BE20"
+footer-col: "#8C1D40"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
@@ -59,7 +59,7 @@ footer-link-col: "#404040"
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
-author:
+author: Tod Kemper
   name: Some Person
 
 # Select your active Social Network Links.
@@ -68,19 +68,19 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
+  email: "tkemper@asu.edu"
   facebook: deanattali
   github: daattali
   twitter: daattali
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
 #  instagram: deanat78
 #  youtube: user/deanat78
 #  spotify: yourname
-#  telephone: +14159998888
+  telephone: +6024003181
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
