--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social-network-links:
   github: daattali
   twitter: daattali
 #  reddit: yourname
-  linkedin: daattali
+  linkedin: tod-kemper
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
