--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: My First GitHub
+title: "My First GitHub"
 
 # Short description of your site
 description: A site to start using GitHub on a regular bases.
