--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ hover-col: "#FFC627"
 footer-col: "#8C1D40"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
+header-col: "#8C1D40"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
