--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ navbar-links:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - Getting Started: "getstarted"
+    - Fantasy Football Analytics: "FFA"
   Author's home: "http://deanattali.com"
   Table Demo: "table-demo"
 
