--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
     - Getting Started: "getstarted"
     - Fantasy Football Analytics: "FFA"
     - Fantasy Football R: "Code-Through---FFAnalytics"
+    - Resume: "resume"
   Author's home: "http://deanattali.com"
   Table Demo: "table-demo"
 
